<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sunshine App</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_title">Location</string>

    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_detault" translatable="false">Salvador,br</string>
    <string name="pref_units_key" translatable="false">temperature</string>
    <string name="pref_units_title">Temperature unit</string>

    <string name="pref_unit_metric" translatable="false">metric</string>
    <string name="pref_unit_imperial" translatable="false">imperial</string>

    <string name="unit_metric">Metric</string>
    <string name="unit_imperial">Imperial</string>
    <string name="action_view_map">View location</string>
    <string name="error_map_intent_not_found">Can\'t find a map application</string>
    <string name="action_share">Share</string>

    <string-array name="pref_units_options">
        <item>@string/unit_metric</item>
        <item>@string/unit_imperial</item>
    </string-array>

    <string-array name="pref_units_values">
        <item>@string/pref_unit_metric</item>
        <item>@string/pref_unit_imperial</item>
    </string-array>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    ,

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

        <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type" translatable="false">estudos.android.com.br</string>
    <string name="content_authority" translatable="false">br.com.android.estudos.sunshineapp</string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification" translatable="false">last_notification</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <string name="pref_notify_key" translatable="false">notify</string>
    <string name="pref_notify_title">Notifications</string>
    <string name="pref_notify_on">enabled</string>
    <string name="pref_notify_off">disabled</string>
    <string name="pref_notify_default" translatable="false">true</string>
    <string name="pref_location_status_key">location_status</string>

    <string name="empty_forecast_list">No Weather Information Available</string>
    <string name="empty_forecast_list_no_network">No weather information available. The network is not available to fetch weather data.</string>
    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data.</string>
    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. The location in settings is not recognized by the weather server.</string>

    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>

    <!-- Format for retrieving art from an external source [CHAR LIMIT=NONE] -->
    <string name="format_art_url" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>

</resources>
