<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <br.com.android.estudos.sunshineapp.LocationEditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_title"
        android:defaultValue="@string/pref_location_detault"
        android:inputType="text"
        android:singleLine="true"
        app:minLength="3"
        />

    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_title"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values"
        android:defaultValue="@string/pref_unit_metric"
        />

    <CheckBoxPreference
        android:key="@string/pref_notify_key"
        android:title="@string/pref_notify_title"
        android:summaryOn="@string/pref_notify_on"
        android:summaryOff="@string/pref_notify_off"
        android:defaultValue="@string/pref_notify_default"
        />

</PreferenceScreen>